[package]
name = "pybadge-high"
workspace = ".."
version = "0.1.1"
edition = "2021"
repository ="https://github.com/LuckyTurtleDev/more-wallpapers"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
include = ["/src/**/*.rs", "/build.rs", "/LICENSE*", "/README.md"]
license = "MIT OR Apache-2.0"
description= "High Level Board Support crate for the Adafruit pybadge"

[features]
default = ["time"]
## support for the Neopixel below the screen
neopixel = ["dep:ws2812-timer-delay", "dep:smart-leds-trait", "dep:embedded-hal"]
## support for serial communication over usb
usb = ["edgebadge/usb", "dep:usb-device"]
## support for single frequenc sound
pwm_sound = []
## support for time measurement
time = []

[dependencies]
cortex-m = "0.7.7"
embedded-graphics = "0.7.1"
edgebadge = { version = "0.9.0"}
st7735-lcd = { version = "0.8.1", default-features = false }
ws2812-timer-delay = { version = "0.3.0", optional = true }
smart-leds-trait = { version = "0.2.1", optional = true }
embedded-hal = { version = "0.2.7", default-features = false, optional = true }
cortex-m-rt = { version = "0.7.3" }
usb-device = { version = "0.2.9", optional = true }
usbd-serial = "0.1.1"
document-features = "0.2.7"

[build-dependencies]
rustc_version = "0.4.0"


[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabihf"
